Wed Oct 25 07:58:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ace/config-rtems.h:
	* ace/OS_NS_sys_socket.inl:
	  Added ACE_LACKS_ACCEPT, ACE_LACKS_CONNECT, ACE_LACKS_GETPEERNAME,
	  ACE_LACKS_GETSOCKNAME

Wed Oct 25 06:30:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ace/TTY_IO.cpp:
	  Fixed compile error on Vxworks

Tue Oct 24 23:53:08 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/config-aix-4.x.h: Changed ACE_HAS_PTHREAD_CONTINUE to
          ACE_HAS_PTHREAD_CONTINUE_NP and ACE_HAS_PTHREAD_SUSPEND to
          ACE_HAS_PTHREAD_SUSPEND_NP. The non-_NP varieties return ENOTSUP;
          the _NP varieties are the only documented APIs through AIX 5.3.
          Thanks to Guy Peleg for raising this issue.

        * tests/Thread_Manager_Test.cpp: Altered the suspend/resume tests to
          only allow ENOTSUP as a legit result if the config.h file does not
          include ACE_HAS_... settings that indicate it should work.

Tue Oct 24 23:59:10 UTC 2006  Ossama othman  <ossama_othman at symantec dot com>

        * examples/Service_Configurator/IPC-tests/server/Handle_Timeout.inl
          (init):
        * examples/Shared_Malloc/test_position_independent_malloc.cpp
          (parse_args):

          Use intptr_t instead of int when casting to void*.  Addresses
          "sizes do not match" warnings in 64-bit Intel compiler builds.

Tue Oct 24 23:49:25 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/Hash_Map_Manager_T.inl (ACE_Hash_Map_Iterator_Base_Ex):

          Commented out use of ACE_TRACE macro.  The regular expression in
          the bin/fuzz.pl script used to detect ACE_TRACE mismatch
          incorrectly identifies a mismatch the ACE_TRACE question.  Once
          the fuzz script is fixed, the ACE_TRACE can be uncommented.

Tue Oct 24 22:20:38 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/Truncate.h:
