@@ -1,3 +1,8 @@
+Wed Oct 25 08:04:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+	* tests/Priority_Buffer_Test.cpp:
+	  Fixed compile problem with gcc 2.96
+
 Wed Oct 25 07:58:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
 	* ace/config-rtems.h:
